[OZONE-DRM] If the GAMMA properties aren't available always do legacy API

If we don't have the GAMMA properties try the legacy path even when
trying to disable GAMMA otherwise we could leave the GAMMA set to an
undesirable value.

BUG=868479
TEST=New unittest

Change-Id: I61b7c576b4ae09f1a2ad6d8bf837fb01bcd49b79
Reviewed-on: https://chromium-review.googlesource.com/1153599
Commit-Queue: Daniel Nicoara <dnicoara@chromium.org>
Reviewed-by: Daniele Castagna <dcastagna@chromium.org>
Cr-Commit-Position: refs/heads/master@{#578827}
Former-commit-id: 0a530d7a01df9540177687ad345af010b1aefde2